manifests/deb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deb-slim
  name: deb-serve
  namespace: hermes-lair
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app: deb-slim
  type: ClusterIP
