manifests/hermes-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hermes
  name: hermes-serve
  namespace: hermes-lair
spec:
  ports:
  - name: openapi
    port: 8642
    protocol: TCP
    targetPort: 8642
  selector:
    app: hermes
  type: ClusterIP
