manifests/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: streamlit
  name: streamlit
  namespace: vllm-rocm
spec:
  ports:
  - port: 8501
    protocol: TCP
    targetPort: 8501
    nodePort: 31182
  selector:
    app: streamlit
  type: NodePort
status:
  loadBalancer: {}
