manifests/deb-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deb-slim-net
  namespace: hermes-lair
spec:
  podSelector:
    matchLabels:
      app: deb-slim
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hermes
    ports:
     - protocol: TCP
       port: 22
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 192.168.0.0/16
        - 10.0.0.0/8
        - 172.16.0.0/12
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
     - protocol: TCP
       port: 53
     - protocol: UDP
       port: 53
